# iroh-swift

./: .gitignore  CLAUDE.md  LICENSE-MIT  Package.swift  README.md
.github/workflows/: feature.yaml  release.yaml
Sources/IrohCLI/: main.swift
Sources/IrohSwift/: IrohAuthor.swift  IrohConfig.swift  IrohDoc+Subscribe.swift  IrohDoc.swift  IrohDocTypes.swift  IrohError.swift  IrohLogging.swift  IrohNode+Blobs.swift  IrohNode+Codable.swift  IrohNode+Docs.swift  IrohNode+Info.swift  IrohNode+MainActor.swift  IrohNode+Progress.swift  IrohNode+Retry.swift  IrohNode+String.swift  IrohNode+Validation.swift  IrohNode.swift  IrohNodeManager.swift  IrohTypes.swift
Tests/IrohSwiftTests/: ErrorPathTests.swift  IntegrationTests.swift  IrohAuthorTests.swift  IrohBlobTests.swift  IrohDocTests.swift  IrohExtensionTests.swift  IrohNodeManagerTests.swift  IrohNodeTests.swift
docs/: NETWORK.md  TICKETS.md
include/: iroh_swift.h  iroh_swift_ffi.h  module.modulemap
rust/: Cargo.toml  cbindgen.toml
rust/src/: ffi.rs  lib.rs  node.rs
scripts/: build-xcframework.sh  release.sh
